add create person to rest services and additional tests